[gd_scene load_steps=2 format=3 uid="uid://dspxupkfjtiid"]

[ext_resource type="Script" uid="uid://b3w8jy6m553t6" path="res://scripts/perguntas.gd" id="1_gnosd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gnosd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.5
offset_top = -46.5
offset_right = 99.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pergunta"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="Botao1" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "a) Resposta"

[node name="Botao2" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "b) Resposta"

[node name="Botao3" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "c) Resposta"

[node name="Botao4" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "d) Resposta"
